package Cliente;

public interface Cliente {
    void crearDialogo();
}
