package Cliente;

import Cliente.Cliente;

public class FabricaDialogoWindows implements Cliente {
    public void crearDialogo() {
        System.out.println("cliente Windows");
    }
}