package Cliente;

import Cliente.Cliente;

public class FabricadialogoMac implements Cliente {
    public void crearDialogo() {
        System.out.println("Nuevo cliente Mac");
    }
}
