package Dialogo;

public interface Dialogo {
    void dialogo();
}
