package Dialogo;

import Dialogo.Dialogo;


public class DialogoMac implements Dialogo {
    public void dialogo() {
        System.out.println("Dialogo.Dialogo en Mac");
    }
}
