package Dialogo;

import Dialogo.Dialogo;

public class DialogoWindows implements Dialogo {
    public void dialogo() {
        System.out.println("Dialogo en Windows");
    }
}
